changing threads to virtual threads